# newsdrop

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_migration.py
backend/app/: database.py  logger.py  main.py  settings.py
backend/app/api/: news.py
backend/app/models/: database.py  news.py
backend/app/schema/: __init__.py  news_articles.py
backend/app/services/: newsapi.py
backend/tests/: pytest.ini
backend/tests/api/: test_news.py
frontend/: Dockerfile  vite.config.ts
